# Task-Journal

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  RELEASING.md  manifest
.beads/: metadata.json
.beads/hooks/: p1-create.sh  p1-demo.sh  p1-link.sh  p2-create.sh  p2-demo.sh  p2-link.sh  p3-create.sh  p3-demo.sh  p3-link.sh  p3-mock-demo.sh  p4-create.sh  p4-demo.sh  p4-link.sh  p5-close-slash.sh  p5-create.sh  p5-merge-msg.txt  p5-verify.sh
.claude/: settings.json
.claude-plugin/: marketplace.json
.docs/plans/: 2026-04-29-p1-task-map.txt  2026-04-29-task-journal-v1-design.md  2026-04-29-task-journal-v1-p1-skeleton.md  2026-04-29-tz-task-journal-v2.md  2026-04-30-p2-task-map.txt  2026-04-30-p3-task-map.txt  2026-04-30-p4-task-map.txt  2026-04-30-p5-task-map.txt  2026-04-30-task-journal-v1-p2-task-pack-core.md  2026-04-30-task-journal-v1-p3-hooks-classifier.md  2026-04-30-task-journal-v1-p4-polish-dogfood.md  2026-05-06-v0.1.4-hardening.md  2026-05-06-v0.2.0-epic-c-pr-body.md  2026-05-06-v0.2.0-epic-c-quality.md  2026-05-06-v0.2.0-rc-perf-and-contracts.md  2026-05-07-v0.2.1-epic-d-operational.md  2026-05-07-v0.2.1-epic-d-pr-body.md  2026-05-08-task-as-goal-redesign.md  2026-05-08-v0.5.0-auto-everything.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: ci.yml  publish.yml  release.yml
crates/tj-cli/: Cargo.toml
crates/tj-cli/examples/: envtest.rs
crates/tj-cli/src/: main.rs
crates/tj-cli/src/tui/: app.rs  chat_view.rs  mod.rs  session_list.rs  task_detail.rs  task_list.rs
crates/tj-cli/tests/: cli.rs
crates/tj-core/: Cargo.toml
crates/tj-core/benches/: hot_paths.rs
crates/tj-core/src/: artifacts.rs  completeness.rs  consolidate.rs  db.rs  embed.rs  event.rs  finalize.rs  frontmatter.rs  fts.rs  harvest.rs  lib.rs  llm.rs  memory.rs  pack.rs  paths.rs  project_hash.rs  recall.rs  reminder.rs  session_id.rs  storage.rs  title.rs
crates/tj-core/src/classifier/: agent_sdk.rs  cli.rs  heuristic.rs  http.rs  hybrid.rs  mock.rs  mod.rs  prompt.rs  telemetry.rs
crates/tj-core/src/dream/: agent_sdk.rs  backend.rs  backfill.rs  http.rs  llm_backend.rs  mod.rs  prompt.rs  scope.rs  state.rs
crates/tj-core/src/session/: discovery.rs  extractor.rs  mod.rs  parser.rs
crates/tj-core/tests/: classifier_eval.rs  golden_pack.rs  round_trip.rs
crates/tj-core/tests/fixtures/: classifier_eval.jsonl
crates/tj-mcp/: Cargo.toml
crates/tj-mcp/src/: main.rs
crates/tj-mcp/tests/: rmcp_roundtrip.rs  skill_doc.rs  smoke.rs
plugin/: .mcp.json  package.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: task-journal-distiller.md
plugin/commands/: close.md  create.md  event.md  pack.md  search.md  stats.md
plugin/hooks/: hooks.json
plugin/scripts/: postinstall.mjs
plugin/skills/rejected/: SKILL.md
plugin/skills/task-journal/: SKILL.md
