[workspace]
resolver = "2"
members = [
    "crates/tj-core",
    "crates/tj-mcp",
    "crates/tj-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
sha2 = "0.10"
dunce = "1"
directories = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Test deps
assert_fs = "1"
predicates = "3"
tempfile = "3"
