[workspace]
resolver = "2"
members = [
    "crates/tj-core",
    "crates/tj-mcp",
    "crates/tj-cli",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Mher Shahinyan"]
repository = "https://github.com/Digital-Threads/Task-Journal"
homepage = "https://github.com/Digital-Threads/Task-Journal"
keywords = ["task-journal", "ai-coding", "mcp", "memory", "agent"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
rmcp = { version = "0.3", features = ["server", "transport-io", "macros", "schemars"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
sha2 = "0.10"
dunce = "1"
directories = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ureq = { version = "2", features = ["json"] }
ratatui = "0.29"
crossterm = "0.28"
fd-lock = "4"
regex = "1"

# Test deps
assert_fs = "1"
predicates = "3"
tempfile = "3"
mockito = "1"
criterion = "0.5"
