[package]
name = "tj-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "task-journal"
path = "src/main.rs"

[dependencies]
tj-core = { path = "../tj-core" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
predicates = { workspace = true }
assert_cmd = "2"
rusqlite = { workspace = true }
