[package]
name = "task-journal-cli"
description = "task-journal: CLI for append-only AI-coding task reasoning chains. Records hypotheses, decisions, rejections, evidence and renders compact resume packs."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "task-journal"
path = "src/main.rs"

[features]
# `embed` (on by default) turns on tj-core's model2vec semantic backend. The
# lean build (`--no-default-features`) keeps the dependency-free lexical
# fallback and a lower MSRV — the CI msrv job builds that configuration.
default = ["embed"]
embed = ["tj-core/embed"]

[dependencies]
tj-core = { package = "task-journal-core", version = "0.21.0", path = "../tj-core", default-features = false }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_fs = { workspace = true }
predicates = { workspace = true }
assert_cmd = ">=2, <2.2.1"
rusqlite = { workspace = true }
mockito = { workspace = true }
