[package]
name = "task-journal-core"
description = "Append-only event log + derived SQLite state for task-journal: schema, storage, pack assembler, classifier client."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "tj_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
dunce = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }
ureq = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockito = { workspace = true }
