[package]
name = "task-journal-core"
description = "Append-only event log + derived SQLite state for task-journal: schema, storage, pack assembler, classifier client."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "tj_core"
path = "src/lib.rs"

[features]
# `embed` pulls the real semantic backend (model2vec, pure-Rust). It is ON by
# default so out-of-the-box `ask` is genuinely semantic; build with
# `--no-default-features` for the lean, dependency-free lexical fallback. We
# pin model2vec-rs to fancy-regex (pure Rust) instead of its default `onig`
# (native oniguruma C lib) so the build stays C-toolchain-free.
default = ["embed"]
embed = ["dep:model2vec-rs"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
dunce = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }
ureq = { workspace = true }
tracing = { workspace = true }
fd-lock = { workspace = true }
regex = { workspace = true }
model2vec-rs = { version = "0.2", optional = true, default-features = false, features = [
    "hf-hub",
    "fancy-regex",
] }

[dev-dependencies]
tempfile = { workspace = true }
mockito = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "hot_paths"
harness = false
