[package]
name = "task-journal-mcp"
description = "MCP server for task-journal: exposes task_pack, task_create, event_add, task_close, task_search to Claude Code and other MCP-compatible agents."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "task-journal-mcp"
path = "src/main.rs"

[dependencies]
tj-core = { package = "task-journal-core", version = "0.6.1", path = "../tj-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
ulid = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
rmcp = { version = "0.3", features = ["server", "client", "transport-io", "macros", "schemars"] }
